--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -1048,7 +1048,7 @@
             \end{tikzpicture}%
         \end{figure}%
 
-        \item Intiutivamente podemos pensar en un recubrimiento de una circunferencia tangente a una recta como una colección de rectas paralelas y atravesadas por una común, como aparece en la figura. De esta forma (tal cual está en el dibujo) al ``enrollar'' el eje $x$ de forma que hagamos coincidir todas las rectas rojas tendremos que la recta azul forma una circunferencia, que como originalmente solo tocaba en un punto a cada recta, resultará en la circunferencia tangente a la recta.
+        \item Intuitivamente podemos pensar en un recubrimiento de una circunferencia tangente a una recta como una colección de rectas paralelas y atravesadas por una común, como aparece en la figura. De esta forma (tal cual está en el dibujo) al ``enrollar'' el eje $x$ de forma que hagamos coincidir todas las rectas rojas tendremos que la recta azul forma una circunferencia, que como originalmente solo tocaba en un punto a cada recta, resultará en la circunferencia tangente a la recta.
         
         \begin{figure}[H]
             \centering
@@ -1814,6 +1814,7 @@
             \ar@{}[lu]|{//}
             }
         \end{gather*}
+        De este segundo diagrama concluimos que $g_*$ es inyectiva y que $f_*$ es sobreyectiva. En particular tenemos que $f_*$ es biyectiva. Como es el homomorfismo inducido de $f$ tendremos que $f_*$ es un isomorfismo.
     \end{proof}
 \end{teo}
 
@@ -2061,9 +2062,25 @@
         Consideramos la homotopía:
         \begin{align*}
             H:Y\times [0,1] &\to Y\\
-            ((x,t),t) &\mapsto (1-t)(x,y)+t\left(x, \frac{1}{2}\right)
+            ((x,y),t) &\mapsto (1-t)(x,y)+t\left(x, \frac{1}{2}\right)
         \end{align*}
-        que es continua. Se deja como ejercicio ver que $H$ está bien definida, es decir, que para cualesquiera 2 elementos relacionados tienen la misma imagen (bajo $R$). De esta forma se tiene
+        que es continua. Veamos que $H$ está bien definida, es decir, que para cualesquiera 2 elementos relacionados tienen la misma imagen (bajo $R$).\\
+        
+        Supongamos $(x_1, y_1),(x_2,y_2)\in Y$ tal que $(x_1,y_1)R(x_2,y_2)$. Si $(x_1,y_1)=(x_2,y_2)$ es claro que $H((x_1,y_1), t) = H((x_2,y_2), t)$. Supongamos entonces que $(x_1,y_1)\neq(x_2,y_2)$. Podemos suponer sin pérdida de generalidad que $x_1=0$, $x_2=1$ y además sabemos que $y_1+y_2 = 1$. Tendremos entonces
+        \begin{align*}
+            H((x_1,y_1), t) &= (1-t)(x_1,y_1)+t\left(x_1, \frac{1}{2}\right) = \\
+            &= (1-t)(0,y_1)+t\left(0, \frac{1}{2}\right) = \left(0,(1-t) y_1 + \frac{1}{2}t\right)\\\\
+            H((x_2,y_2), t) &= (1-t)(x_2,y_2)+t\left(x_2, \frac{1}{2}\right) = \\
+            &= (1-t)(1,y_2)+t\left(1, \frac{1}{2}\right) = \left(1-t+t, (1-t)y_2 + \frac{1}{2}t\right) =\\
+            &= \left(1, (1-t)y_2 + \frac{1}{2}t\right)
+        \end{align*}
+        Veamos entonces que $(H((x_1,y_1), t))R(H((x_2,y_2), t))$.Fijamos $t\in [0,1]$ y aplicamos la siguiente notación $H((x_1,y_1), t) = (x_1', y_1')$, $H((x_2,y_2), t) = (x_2', y_2')$. De esta forma tenemos que
+        \begin{align*}
+            \{x_1', x_2'\} &= \{0,1\}\\
+            y_1'+y_2' &= (1-t) y_1 + \frac{1}{2}t + (1-t)y_2 + \frac{1}{2}t =\\
+            &= (1-t)(y_1+y_2) + \left(\frac{1}{2} + \frac{1}{2}\right)t = 1-t + t = 1
+        \end{align*}
+        Como $t$ era arbitrario podemos concluir que la aplicación $H$ está bien definida. De esta forma se tiene
         \begin{gather*}
             \pi_1(X) \underset{\text{isom.}}{\cong} \pi_1(A) \cong \pi_1(\bb{S}^1)\cong (\bb{Z},+)
         \end{gather*}
@@ -2212,7 +2229,7 @@ Parece intuitivo que el grupo fundamental de una esfera es el trivial ya que pod
 \end{teo}
 
 \begin{coro}
-    Las esferas $\bb{S}^n$ para $n\geq 2$ con simplemente conexas.En particular su grupo fundamental es el trivial.
+    Las esferas $\bb{S}^n$ para $n\geq 2$ son simplemente conexas.En particular su grupo fundamental es el trivial.
 
     \begin{proof}
         Definimos los siguientes conjuntos
@@ -3023,7 +3040,7 @@ En primer lugar fijaremos los preliminares algebraicos necesarios para estudiar 
 \begin{observacion}
     Dada una palabra cualquiera $w=x_1x_2...x_m$ podemos reducirla con el siguiente procedimiento:
     \begin{enumerate}
-        \item Cuando hay dos letras consecutivas del mismo grupo se multiplican ussando la operación de ese grupo.
+        \item Cuando hay dos letras consecutivas del mismo grupo se multiplican usando la operación de ese grupo.
         \item Se eliminan todos los elementos neutros $e_i$ de la palabra.
     \end{enumerate}
     % El conjunto de las palabras reducidas con la operación de yuxtaposición y reducción sí forman un grupo.
@@ -3066,7 +3083,7 @@ En primer lugar fijaremos los preliminares algebraicos necesarios para estudiar 
     \end{gather*}
     sobre un grupo $G$ fijo. Entonces existe un único homomorfismo
     \begin{gather*}
-        f_i \ast G_i \to G
+        f : \underset{i\in I}{\ast} G_i \to G
     \end{gather*}
     tal que el siguiente diagrama conmuta:
     \begin{gather*}    
