--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_2.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_2.tex
@@ -998,3 +998,62 @@ Hasta ahora lo que hemos visto es que para estudiar el número de recubridores d
         }
     \end{gather*}
 \end{observacion}
+
+\begin{ejemplo}\
+    \begin{enumerate}
+        \item $\bb{S}^1$ es el recubridor universal de $\bb{R}$.
+        \item $\bb{R}\bb{P}^n$ es el recubridor universal de $\bb{S}^n$ para $n\geq 2$
+        \item $\bb{R}^2$ es el recubridor universal del cilindro $\bb{S}^1 \times \bb{R}$.
+        \item $\bb{R}^2$ también es el recubridor universal del toro $\bb{S}^1\times \bb{S}^1$.
+    \end{enumerate}
+\end{ejemplo}
+
+\section{Existencia de espacios recubridores}
+
+\begin{definicion}
+    Sea $B$ un espacio topológico entonces 
+    \begin{enumerate}
+        \item Decimos que $B$ es \textbf{localmente simplemente conexo} si todo punto $b\in B$ admite una base de entornos formada por simplemente conexos. O equivalentemente , si para cada abierto $O$ en $B$ y punto $b\in O$ existe un entorno $U$ de $b$ simplemente conexo con $U\subseteq O$.
+
+        \item Decimos que $B$ es \textbf{semilocalmente simplemente conexo} si todo punto $b\in B$ tiene un entorno $U$ tal que 
+        \begin{gather*}
+            (i_u)_* : \pi_1(U,b) \to \pi_1(B,b)
+        \end{gather*}
+        es trivial, donde $i_u:U\to B$ es la inclusión.
+    \end{enumerate}
+\end{definicion}
+
+\begin{observacion}\
+    \begin{enumerate}
+        \item Si $B$ es localmente simplemente conexo, entonces también es semilocalmente simplemente conexo.
+        \item Si $B$ es simplemente conexo entonces es semilocalmente simplemente conexo
+        \item Si $U$ es un entorno de $b\in B$ tal que $(i_U)*: \pi_1(U,b) \to \pi_1(B,b)$ es trivial, entonces también es cierto que si $V$ es entorno de $b$ con $V\subseteq B$ se tiene que $(i_V)* : \pi_1(V,v)\to \pi_1(B,b)$ es trivial.
+    \end{enumerate}
+\end{observacion}
+
+\begin{ejemplo}\
+    \begin{enumerate}
+        \item Si $B$ es un abierto de $\bb{R}^n$ entonces $B$ es localmente simplemente conexo.
+
+        \item $\bb{S}^1$ es locamente simplemente conexo ya que para cada punto $x\in \bb{S}^1$ existe una base de entornos formada por simplemente conexos.
+
+        \item Consideramos $S_n$ la circunferencia de $\bb{R}^2$ centrada en $\left(\frac{1}{n}, 0\right)$ y de radio $\frac{1}{n}$. Consideramos el siguiente expacio
+        \begin{gather*}
+            B = \bigcup\limits_{n\in \bb{N}} S_n
+        \end{gather*}
+        El espacio topológico $B$ no es semilocalmente simplemente conexo.
+
+        \item Tomamos el conjunto de $\bb{R}^3$
+        \begin{gather*}
+            B = \left\{ (x,y,z)\in \bb{R}^3 : 
+                \begin{array}{c}
+                    z=\lambda,\ \lambda \geq 0\\
+                    (x,y) = \lambda(a,b),\ \text{ con } (a,b)\in \bigcup\limits_{n\in \bb{N}}S_n
+                \end{array}
+            \right\}
+        \end{gather*}
+        Donde $S_n$ es una de las circunferencias del ejemplo anterior. Esto si se analiza gráficamente es fácil ver que son un montón de conos unidos con el origen y tangentes al $(0,0,1)$ y que intersecan con el plano de altura $1$ formando circunferencias tangentes al $(0,0,1)$ de la forma $S_n$.\\
+
+        Tenemos que $B$ es simplemente conexo por ser contráctil pero no es localmente simplemente conexo.
+    \end{enumerate}
+\end{ejemplo}
