--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_0.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_0.tex
@@ -28,7 +28,7 @@
 \end{teo}
 
 \begin{teo}
-    Si $A$ es un subconjunto del e.t. $X$ y $A$ es conexo, entonces dado $B$ con $A\subset B\subset\overline{A}$, entonces se tiene que $B$ también es conexo. En particular, la adherencia de un conexo siempre es un conjunto conexo.
+    Si $A$ es un subconjunto del e.t. $X$ y $A$ es conexo, entonces dado $B$ con $A\subset B\subset\overline{A}$ se tiene que $B$ también es conexo. En particular, la adherencia de un conexo siempre es un conjunto conexo.
 \end{teo}
 
 \begin{teo}
