--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -3658,7 +3658,7 @@ Si consideramos ahora $g=[\beta]_{U\cap V}$ tendríamos que
 
         Es claro que $U,V$ son abiertos arcoconexos y $U\cap V$ es arcoconexo y $X_{m+1}=U\cup V$. Tenemos que $U$ tiene por retracto de deformación a $X_m$ (podemos pensar en llevar el rectángulo superior, que está abierto, a las esquinas del penúltimo rectángulo superior) por lo que 
         \begin{gather*}
-            \pi_1(U)\cong \bb{Z} \ast \overset{(m)} \ast \bb{Z}
+            \pi_1(U)\cong \bb{Z} \ast \overset{(m)}{...} \ast \bb{Z}
         \end{gather*}
         $V$ tiene por retracto de deformación al rectángulo exterior (ya que todas las barras horizontales excepto la primera y la última están abiertas por lo que se pueden retraer llevándolas a los laterales de forma que quede solo el rectángulo exterior). Dicho rectángulo será 
         \begin{gather*}
