--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -3233,7 +3233,7 @@ De esta forma, $(F(a), \cdot)$ es isomorfo a $\bb{Z}$
     \end{gather*}
     que extiende a $j_{i*}$ y $j_{2*}$ es sobreyectivo. Además, el núcleo viene dado por el subgrupo normal generado por 
     \begin{gather*}
-        R = \{i_{1*}^{-1}(g)i_{2*}(g) : g\in \pi_1(U\cap V,x_0)\}
+        R = \{i_{1*}(g)^{-1}i_{2*}(g) : g\in \pi_1(U\cap V,x_0)\}
     \end{gather*}
     Por tanto, 
     \begin{gather*}
