--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_3.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_3.tex
@@ -17,13 +17,11 @@ En primer lugar recordaremos algunos conceptos de Topología I para poder defini
                 \shorthandoff{>} % Para poner puntas de flecha
     
                 % Background
-                \fill[fill=red!30] (-1,0) circle (\radius);
-                \fill[fill=blue!30] (1.5,0) circle (\radius);
+                \filldraw[thick, dashed, red, fill=red!30] (-1,0) circle (\radius);
+                \filldraw[thick, dashed, blue, fill=blue!30] (1.5,0) circle (\radius);
     
-                \draw[dashed, thick] (-1,0) circle (\radius);
-                \filldraw (-1,0) circle (1.5pt)  node[below] {$x$};
-                \draw[dashed, thick] (1.5,0) circle (\radius);
-                \filldraw (1.5,0) circle (1.5pt)  node[below] {$y$};
+                \filldraw (-1,0) circle (1.5pt) node[below] {$x$};
+                \filldraw (1.5,0) circle (1.5pt) node[below] {$y$};
     
             \end{tikzpicture}
         \end{center}
@@ -57,7 +55,7 @@ En primer lugar recordaremos algunos conceptos de Topología I para poder defini
 \end{observacion}
 
 \begin{definicion}
-    Sea $S$ una superficie\footnote{siempre se entiende que es una superficie topológica} y $D$ un abierto dentro de $S$. Decimos que $D$ es un \textbf{disco regular} en $S$ si existe un aberto $D'$ tal que $D\subsetneq D'$ y un homeomorfismo $h:D'\to \bb{D}=\{x\in \bb{R}^2 : \|x\|<1\}=B(0,1)$ tal que $h(D)=\bb{D}_r=\{x\in \bb{R}^2 : \|x\|<r\}=B(0,r)$ con $0<r<1$.
+    Sea $S$ una superficie\footnote{siempre se entiende que es una superficie topológica} y $D$ un abierto dentro de $S$. Decimos que $D$ es un \textbf{disco regular} en $S$ si existe un abierto $D'$ tal que $D\subsetneq D'$ y un homeomorfismo $h:D'\to \bb{D}=\{x\in \bb{R}^2 : \|x\|<1\}=B(0,1)$ tal que $h(D)=\bb{D}_r=\{x\in \bb{R}^2 : \|x\|<r\}=B(0,r)$ con $0<r<1$.
 \end{definicion}
 
 \begin{ejemplo}\
@@ -66,8 +64,102 @@ En primer lugar recordaremos algunos conceptos de Topología I para poder defini
         \begin{gather*}
             D = \{(x,y,z)\in \bb{S}^2 : z<r\} \text{ con } -1<r<1
         \end{gather*}
-        En efecto es un disco regular.
+        En efecto es un disco regular. 
+        \begin{proof}
+            Como $-1<r<1$ tenemos que existe un $\veps >0$ tal que $r + \veps < 1$. Podemos fijar dicho $\veps$ y consideramos el siguiente conjunto
+            \begin{gather*}
+                D' = \{(x,y,z)\in \bb{S}^2 : z<r+\veps = r'\} \text{ con } -1<r'<1
+            \end{gather*}
+            En efecto tendremos que para cualquier punto $(x,y,z)\in D$ se tiene que $z<r<r'$ luego $(x,y,z)\in D'$. Además podemos considerar un punto $(x,y,z)\in \bb{S}^2$ tal que $z=r$ y tendremos que dicho punto está en $D'\setminus D$. Podemos concluir que $D\subsetneq D'$.
 
-        \item Consideramos 
+            \begin{figure}[H]
+                \centering
+                \begin{tikzpicture}
+                    \shorthandoff{>}
+                    \begin{scope}
+                        % D y D'
+                        \fill[blue, opacity=0.2] (-1.85, 0.7) arc (-200:20:2 and 2);
+                        \fill[blue!20] (0,0.7) ellipse (1.85 and 0.46);
+
+                        \fill[red!20] (-2,0.2) arc (-186:6:2 and 2);
+
+                        \filldraw[thick, draw=red, fill=red!50!blue!30, dashed] (0,0.2) ellipse (1.98 and 0.5);
+
+                        \draw[thick, blue, dashed] (0,0.7) ellipse (1.85 and 0.46);
+
+                        \node[blue] at (2.5,0.5) {$D'$};
+                        \node[red] at (2.5,-0.5) {$D$};
+
+                        % r y r'
+                        \node[draw, circle, red, fill=red, inner sep=1pt, label={[red]right:$r$}] at (0,0.2) {};
+                        \node[draw, circle, blue, fill=blue, inner sep=1pt, label={[blue]right:$r'$}] at (0,0.7) {};
+
+                        % Ejes
+                        \draw[thick] (0,-3) -- (0,3);
+                        \node[draw, circle, fill=black, inner sep=1pt, label=above right:$1$] at (0,2) {};
+                        \node[draw, circle, fill=black, inner sep=1pt, label=below right:$-1$] at (0,-2) {};
+
+                        % Esfera
+                        \draw[thick] (0,0) circle [radius=2];
+                        \draw[thick, dashed] (2,0) arc (0:180:2 and 0.5);
+                        \draw[thick] (2,0) arc (0:-180:2 and 0.5);
+                    \end{scope}
+                \end{tikzpicture}
+            \end{figure}
+            
+            Buscamos ahora un homeomorfismo $h:D'\to \bb{D}$ tal que $h(D)=\bb{D}_s$ con $0<s<1$. Pensamos en la proyección estereográfica desde el polo norte, $h:D'\to \bb{\bb{R}}^2$. Gráficamente lo podemos ver de la siguiente forma:
+
+            \begin{figure}[H]
+                \centering
+                \begin{tikzpicture}
+                    \shorthandoff{>}
+                    \begin{scope}
+
+                        \fill[thick, blue!20, dashed] (0,-2) ellipse (5.7 and 1.425);
+                        \fill[thick, red!20, dashed] (0,-2) ellipse (4.4 and 1.1);
+
+                        % D y D'
+                        \fill[blue, opacity=0.2] (-1.85, 0.7) arc (-200:20:2 and 2);
+                        \fill[blue!20] (0,0.7) ellipse (1.85 and 0.46);
+
+                        \fill[red!20] (-2,0.2) arc (-186:6:2 and 2);
+
+                        \filldraw[thick, draw=red, fill=red!50!blue!30, dashed] (0,0.2) ellipse (1.98 and 0.5);
+
+                        \draw[thick, blue, dashed] (0,0.7) ellipse (1.85 and 0.46);
+
+                        % Ejes
+                        \draw[thick] (0,-3) -- (0,3);
+                        \node[draw, circle, fill=black, inner sep=1pt, label=above right:$1$] at (0,2) {};
+                        \node[draw, circle, fill=black, inner sep=1pt, label=below right:$-1$] at (0,-2) {};
+
+                        % Esfera
+                        \draw[thick] (0,0) circle [radius=2];
+                        \draw[thick, dashed] (2,0) arc (0:180:2 and 0.5);
+                        \draw[thick] (2,0) arc (0:-180:2 and 0.5);
+
+                        % Plano suelo 
+                        \draw (-1.95,-0.4) -- (-5, -0.4) -- (-7,-3.6) -- (5,-3.6) -- (7, -0.4) -- (1.95,-0.4);
+
+                        \draw[thick, blue] (5.7 , -2) -- (0,2) -- (-5.7 , -2);
+                        \draw[thick, red] (4.4 , -2) -- (0,2) -- (-4.4 , -2);
+                        
+                        \draw[thick, red, dashed] (0,-2) ellipse (4.4 and 1.1);
+                        \draw[thick, blue, dashed] (0,-2) ellipse (5.7 and 1.425);
+
+                        % Radio
+                        \draw[thick, violet, ->] (0,-2) -- (4,-3);
+                        \node[violet] at (2,-2.2) {$R$};
+                    \end{scope}
+                \end{tikzpicture}
+            \end{figure}
+        \end{proof}
+
+        y llegamos a que existe un radio $R>0$ tal que podemos definir una nueva aplicación
+        \Func{h'}{D'}{\bb{D}}{(x,y,z)}{\frac{1}{R}h(x,y,z)}
+        que será un homeomorfismo (por serlo $h$). Además, es fácil ver que $h'(D) = \bb{D}_s$ con $0<s<1$.
+
+        \item Consideramos la esfera sin el polo norte $D = \bb{S}^2\setminus \{(0,0,1)\}$ en $\bb{S}^2$. En este caso tendremos que no es un disco regular ya que el único abierto $D'$ que contiene estrictamente a $D$ es el total $D'=\bb{S}^2$ que sabemos que no es homeomorfo a ningún subconjunto de $\bb{R}^2$.
+        
     \end{enumerate}
 \end{ejemplo}
