--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_3.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_3.tex
@@ -31,16 +31,28 @@ En primer lugar recordaremos algunos conceptos de Topología I para poder defini
     Decimos que un espacio topológico $X$ es 2AN (o que cumple el \textbf{segundo axioma de numerabilidad}) si existe una base de la topología numerable.
 \end{definicion}
 
-\begin{definicion}
-    Decimos que un espacio topológico $X$ es \textbf{localmente euclídeo} si para coda $x\in X$ existe un entorno abierto suyo que es homeomorfo a un abierto de $\bb{R}^n$.\\
+Una vez recordados estos conceptos pasamos a las nuevas definiciones de esta sección:
 
+\begin{definicion}
+    Decimos que un espacio topológico $X$ es \textbf{localmente euclídeo} si para cada $x\in X$ existe un entorno abierto suyo que es homeomorfo a un abierto de $\bb{R}^n$.
+\end{definicion}
+
+\begin{definicion}
     Decimos que $S$ es una \textbf{superficie} si $S$ es un espacio topológico tal que $\forall x \in S$ existe un abierto que contiene a $x$ y que es homeomorfo a un abierto de $\bb{R}^2$. Además, pediremos que $S$ sea T2 (o Hausdorff) y 2AN (segundo axioma de numerabilidad).
 \end{definicion}
 
 \begin{ejemplo}\
     \begin{enumerate}
         \item $\bb{R}^2$ y $\bb{S}^2$ son superficies.
+        \begin{proof}
+            En el caso de $\bb{R}^2$ es trivial ya que para cualquier punto $x\in \bb{R}^2$ podemos considerar el total, $\bb{R}^2$ que es abierto, contiene a $x$ y es homeomorfo a sí mismo.\\
+
+            En el caso de $\bb{S}^2$ podemos considerar para cada $x\in \bb{S}^2$ el conjunto $A = \bb{S}^2\setminus\{-x\}$, es decir, la esfera quitándole la antípoda. Sabemos que $A$ es abierto (ya que su complementario es $\{-x\}$ que es cerrado) y que contiene a $x$ (ya que $0\notin \bb{S}^2$). Además sabemos que $A$ es homeomorfo a $\bb{R}^2$ que es un abierto de $\bb{R}^2$ (el total).
+        \end{proof}
         \item Cualquier abierto de una superficie es también una superficie. En particular, las bolas abiertas de $\bb{R}^2$ son también superficies.
+        \begin{proof}
+            Consideramos $A$ el abierto de la superficie $S$ y un punto cualquiera $x\in A$. Por ser $S$ una superficie existe un abierto $U$ que contiene a $x$ y que es homeomorfo (por $h$) a un abierto de $\bb{R}^2$. Consideramos entonces $A\cap U$ que es abierto por ser intersección de dos abiertos y que además contiene a $x$. Podemos considerar la restricción en el dominio del homeomorfismo $h$ a $A\cap U$ que seguirá siendo un homeomorfismo a un abierto de $\bb{R}^2$. Como esto se verifica para todo $x\in A$ tendremos que $A$ es una superficie.
+        \end{proof}
         \item Sea $X=\{x\in \bb{R}^2 : \|x\|\leq r\} = \overline{B}(0,r)$. Entonces $X$ no es una superficie porque para los puntos $x$ con $\|x\| = r$ no existe un entorno abierto que lo contenga y que sea homeomorfo a un abierto de $\bb{R}^2$.
         \begin{proof}
             Tomamos un punto $x\in X$ con $\|x\|=r$. Si existiese $U$ entorno abierto suyo homeomorfo a un abierto $A$ de $\bb{R}^2$ entonces $\exists V$ entorno abierto de $x$ contenido en $U$ que es de la forma $V=B(x,r_0)\cap X$. Entonces $V$ es homeomorfo a un abierto $A'$ de $\bb{R}^2$ (ya que sería una restricción en el dominio del homeomorfismo entre $h:U\to A$). De esta forma tendríamos que como $V\setminus \{x\}$ es convexo debe ser simplemente conexo. Sin embargo, su imagen por homeomorfismo $h$ será $A'\setminus \{h(x)\}$ y como $h(x)$ está en el abierto $A'$ existe un radio $r_0'>0$ tal que $\overline{B}(h(x),r_0') \subseteq A'$. Pero el lazo dado por la frontera de dicha bola, $Fr(\overline{B}(h(x)r_0'))$ no es homotópicamente constante en $\bb{R}^2\setminus \{h(x)\}$. Por tanto este lazo no es homotópicamente constante en $A'\setminus\{h(x)\}$ por lo que $A'\setminus\{h(x)\}$ no es simplemente conexo. Esto prueba que $\overline{B}(0,r)$ no es una superficie.
