--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/main.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/main.tex
@@ -48,11 +48,11 @@
     \newpage
     \thispagestyle{empty}
 
-    \input{Tema_0.tex}
+    % \input{Tema_0.tex}
 
-    \input{Tema_1.tex}
+    % \input{Tema_1.tex}
 
-    \input{Tema_2.tex}
+    % \input{Tema_2.tex}
 
     \input{Tema_3.tex}
 \end{document}
