--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_3.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_3.tex
@@ -67,7 +67,7 @@ Una vez recordados estos conceptos pasamos a las nuevas definiciones de esta sec
 \end{observacion}
 
 \begin{definicion}
-    Sea $S$ una superficie\footnote{siempre se entiende que es una superficie topológica} y $D$ un abierto dentro de $S$. Decimos que $D$ es un \textbf{disco regular} en $S$ si existe un abierto $D'$ tal que $D\subsetneq D'$ y un homeomorfismo $h:D'\to \bb{D}=\{x\in \bb{R}^2 : \|x\|<1\}=B(0,1)$ tal que $h(D)=\bb{D}_r=\{x\in \bb{R}^2 : \|x\|<r\}=B(0,r)$ con $0<r<1$.
+    Sea $S$ una superficie\footnote{siempre se entiende que es una superficie topológica} y $D$ un abierto dentro de $S$. Decimos que $D$ es un \textbf{disco regular} en $S$ si existe un abierto $D'$ tal que $D\subsetneq D'$ y un homeomorfismo $h:D'\to \bb{D}=\{x\in \bb{R}^2 : \|x\|<1\}=B((0,0),1)$ tal que $h(D)=\bb{D}_r=\{x\in \bb{R}^2 : \|x\|<r\}=B((0,0),r)$ con $0<r<1$.
 \end{definicion}
 
 \begin{ejemplo}\
@@ -90,7 +90,7 @@ Una vez recordados estos conceptos pasamos a las nuevas definiciones de esta sec
                     \shorthandoff{>}
                     \begin{scope}
                         % D y D'
-                        \fill[blue, opacity=0.2] (-1.85, 0.7) arc (-200:20:2 and 2);
+                        \fill[blue!20] (-1.85, 0.7) arc (-200:20:2 and 2);
                         \fill[blue!20] (0,0.7) ellipse (1.85 and 0.46);
 
                         \fill[red!20] (-2,0.2) arc (-186:6:2 and 2);
@@ -172,6 +172,73 @@ Una vez recordados estos conceptos pasamos a las nuevas definiciones de esta sec
         que será un homeomorfismo (por serlo $h$). Además, es fácil ver que $h'(D) = \bb{D}_s$ con $0<s<1$.
 
         \item Consideramos la esfera sin el polo norte $D = \bb{S}^2\setminus \{(0,0,1)\}$ en $\bb{S}^2$. En este caso tendremos que no es un disco regular ya que el único abierto $D'$ que contiene estrictamente a $D$ es el total $D'=\bb{S}^2$ que sabemos que no es homeomorfo a ningún subconjunto de $\bb{R}^2$.
+
+        \item $\bb{D}_r = B((0,0), r)\subseteq \bb{R}^2$ es un disco regular en $\bb{R}^2$ para todo $r\in \bb{R}^+$. Sin embargo, $\bb{D}_r$ no es regular en $S=\bb{D}_r$.
         
+        \item En $\bb{R}^2$ consideramos el siguiente conjunto
+        \begin{gather*}
+            D=\bb{R}^2 \setminus \{(x,0) : x\geq 0\}
+        \end{gather*}
+        Entonces $D$ no puede ser un disco regular.
+        \begin{proof}
+            Si existiese un $D'$ que contiene a $D$ y contenido en $\bb{R}^2$ con $h: D' \to \bb{D}$ homeomorfismo tal que $h(D)= \bb{D}_r$ podemos tomar su restricción $h_{|D'\setminus D} : D'\setminus D  \to \bb{D}\setminus \bb{D}_r$ que seguirá siendo un homeomorfismo. Tenemos además que $D\subsetneq D \subseteq \bb{R}^2$ luego $D'\setminus D \subseteq \{(x,0) : x\geq 0\}$. Entonces tendremos que $(D'\setminus D)\setminus \{(x,0)\}$ no es convexo pero $h((D'\setminus D)\setminus \{(x,0)\}) = (\bb{D}\setminus \bb{D}_r)\setminus \{(h(x,0))\}$ es conexo por lo que no pueden ser homeomorfos y llegamos a contradicción.
+        \end{proof}
     \end{enumerate}
 \end{ejemplo}
+
+\begin{lema}
+    Sea $p_0$ un punto de una superficie $S$. Dado un entorno $U$ de $p_0$ existe $D$ disco regular que contiene a $p_0$ y está contenido en $U$. En particular, los discos regulares forman una base de la topología.
+    \begin{proof}
+        Como $S$ es una superficie, entonces para $p_0$ existe un abierto $V$ que contiene a $p_0$ y un homeomorfismo 
+        \begin{gather*}
+            \varphi : V \to \varphi(V)\subseteq \bb{R}^2
+        \end{gather*}
+        sobre $\varphi(V)$ que ha de ser abierto de $\bb{R}^2$. Ya que $\varphi(U\cap V)$ es un entorno de $\varphi(p_0)$ en $\bb{R}^2$ tenemos que existe un $R_0>0$ tal que
+        \begin{gather*}
+            B(\varphi(p_0), R_0)\subseteq \varphi(U\cap V)
+        \end{gather*}
+        Tomamos
+        \begin{gather*}
+            D=\varphi^{-1}\left(B\left(\varphi(p_0), \frac{R_0}{2}\right)\right)\\
+            D'=\varphi^{-1}(B(\varphi(p_0), R_0))
+        \end{gather*}
+        Componiendo $\varphi$ con una transformación afín podemos llevar las bolas $B\left(\varphi(p_0), \frac{R_0}{2}\right)$ y $B(\varphi(p_0), R_0)$ a $\bb{D}_{\nicefrac{1}{2}}$ y $\bb{D}$ respectivamente.
+    \end{proof}
+\end{lema}
+
+\begin{definicion}
+    Sean $S_1$ y $S_2$ dos superficies conexas y disjuntas. Tomamos $D_1\subseteq S_1$ y $D_2\subseteq S_2$ discos regulares y consideramos un homeomorfismo $h: Fr(D_1)\to Fr(D_2)$. Sobre el espacio topológico $X=(S_1\setminus D_1)\cup (S_2\setminus D_2)$ consideramos la relación de equivalencia $R$ dada por
+    \begin{gather*}
+        x_1 R x_2 \sii \left\{
+        \begin{array}{c}
+            x_1=x_2\\
+            \vee\\
+            \{x_1,x_2\} = \{z, h(z)\} \text{ con } z\in Fr(D_1)
+        \end{array}
+        \right.
+    \end{gather*}
+    Denotamos por $S_1\# S_2$ al espacio topológico cociente de $X$ bajo la relación de equivalencia $R$ y lo llamaremos \textbf{suma conexa} de $S_1$ con $S_2$.
+\end{definicion}
+
+\begin{teo}
+    El espacio topológico $S_1\#S_2$ es una superficie conexa que, salvo homeomorfismo, no depende de los discos $D_1$ y $D_2$ regulares ni del homeomorfismo $h$ entre sus fronteras.
+\end{teo}
+
+\begin{observacion}\
+    \begin{enumerate}
+        \item $S_1\#S_2 = S_2\#S_1$.
+
+        \item Si $S_1$ es una superficie cualquiera y $S_2$ es la esfera $\bb{S}^2$, entonces 
+        \begin{gather*}
+            S_1\#S_2 = S_1\# \bb{S}^2 \cong S_1
+        \end{gather*}
+
+        \item Si tenemos $n$ toros ($n\geq 2$) podemos definir 
+        \begin{gather*}
+            \bb{T}_n \equiv \text{suma conexa de los $n$ toros}
+        \end{gather*}
+        que recibe el nombre de \textbf{$n$-toro} o \textbf{esfera con $n$ asas}.
+
+        \item La suma conexa de $n$ planos proyectivos la llamaremos\footnote{no confundir con $\bb{R}\bb{P}^n$} \textbf{$n$ plano proyectivo}, $\bb{R}\bb{P}^2_n$.
+    \end{enumerate}
+\end{observacion}
