--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_3.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_3.tex
@@ -662,7 +662,7 @@ Una vez recordados estos conceptos pasamos a las nuevas definiciones de esta sec
                 \draw[->, blue] (1.5,0.75) ++(0, -0.01) -- ++(-0.01,0.01); %c
                 \draw[->, red] (1.5,1) ++(0, -0.01) -- ++(-0.01,0.01); %d
                 \draw[->, red] (2,0.25) ++(0, -0.01) -- ++(0,0.01); %e
-                \draw[->, red] (1.25,0.32) ++(0, -0.01) -- ++(0.01,0.002); %f
+                \draw[<-, red] (1.25,0.32) ++(0, -0.01) -- ++(0.01,0.002); %f
 
                 % Identificaciones
                 \filldraw[green!60!black] (0,0) circle (1pt) node[above left] {$v_1$};
