--- a/documents/Cuarto/Primer Cuatrimestre/Inferencia Estadística/EjerciciosExtra/main.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Inferencia Estadística/EjerciciosExtra/main.tex
@@ -112,6 +112,6 @@
         \begin{gather*}
             F_{exp} =  \frac{VE}{S_R^2} = \frac{1591,006}{22,1457} \cong 71,8426
         \end{gather*}
-        de la tabla $F$ de Snedecor tenemos que $F_{1, 6; 0.05} \cong 5.99$. Como $F_exp > F_{1,6;0,05}$ rechazamos la hipótesis $H_0$, es decir, los datos aportan evidencia de una relación lineal. Esto concuerda con el valor tan alto que hemos obtenido al calcular $r^2$. Finalmente podemos afirmar que existe evidencia estadística significativa, al $95\%$ de confianza, para concluir que la productividad depende linealmente de la antigüedad.
+        de la tabla $F$ de Snedecor tenemos que $F_{1, 6; 0.05} \cong 5.99$. Como $F_{exp} > F_{1,6;0,05}$ rechazamos la hipótesis $H_0$, es decir, los datos aportan evidencia de una relación lineal. Esto concuerda con el valor tan alto que hemos obtenido al calcular $r^2$. Finalmente podemos afirmar que existe evidencia estadística significativa, al $95\%$ de confianza, para concluir que la productividad depende linealmente de la antigüedad.
     \end{enumerate}
 \end{document}
