--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_3.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_3.tex
@@ -739,5 +739,126 @@ Una vez recordados estos conceptos pasamos a las nuevas definiciones de esta sec
             \end{scope}
         \end{tikzpicture}
     \end{figure}
-    Tendríamos entonces $\cc{P}=\{a,b,c,d; abc, c^{-1}ed, a^{-1}d^{-1}f, bef\}$
+    Tendríamos entonces $\cc{P}=\{a,b,c,d; abc, c^{-1}ed, a^{-1}d^{-1}f, bef\}$.
+\end{ejemplo}
+
+\begin{prop}
+    El espacio topológico $|\cc{P}|$ asociado a una presentación poligonal $\cc{P}$ es una superficie compacta (posiblemente no conexa).
+\end{prop}
+
+\begin{observacion}
+    Toda superficie compacta debe tener una presentación poligonal y recíprocamente, toda presentación poligonal nos da una superficie compacta. Como una misma superficie puede tener muchas (de hecho infinitas) presentaciones poligonales, nuestro objetivo será dada una presentación poligonal $\cc{P}$ llegar a otra presentación poligonal $\cc{P}'$ reconocible que represente a la misma superficie
+\end{observacion}
+
+\subsection{Transformaciones elementales}
+
+Dada una presentación poligonal $\cc{P}$ vamos a ver una serie de transformaciones que, aunque cambian la presentación, no cambia la superficie asociada $|\cc{P}|$ (salvo homeomorfismo).
+
+\subsubsection{Renombrar}
+Dado un símbolo $a_{i_0}$ en $\cc{P}$ podemos cambiar su nombre por otro distinto $b_{i_0}$ que no esté siendo usado. También podemos cambiar el exponente de un símbolo las dos veces que aparezca este, es decir, cambiaríamos $a_i$ por $a_i^{-1}$ (en ambos lados a la vez).
+
+\begin{figure}[H]
+    \centering
+    \begin{tikzpicture}
+            \begin{scope}[shift={(0,0)}]
+                % Cuadrado
+                \draw[thick] (0,1.5) -- (0,0); %1
+                \draw[thick] (0,0) -- (1.5,0); %2
+                \draw[thick] (1.5,0) -- (1.5,1.5); %3
+                \draw[thick] (1.5,1.5) -- (0,1.5); %4
+
+                % Leyenda
+                % \node[label=left:{$a$}] at (0, 0.75) {}; %1
+                % \node[label=below:{$b$}] at (0.75, 0) {}; %2
+                \node[label=right:{$a_{i_0}$}] at (1.5, 0.75) {}; %3
+                % \node[label=above:{$d$}] at (0.75, 1.5) {}; %4
+
+                % Flechas
+                % \draw[->] (0,0.75) ++(0, 0.01) -- ++(0,-0.01); %1
+                % \draw[->] (0.75,0) ++(-0.01,0) -- ++(0.01,0); %2
+                \draw[->] (1.5,0.75) ++(0, -0.01) -- ++(0,0.01); %3
+                % \draw[->] (0.75,1.5) ++(0.01, -0.01) -- ++(-0.01,0); %4
+
+            \end{scope}
+            \begin{scope}[shift={(3,0)}]
+                % Triángulo
+                \draw[thick] (1,1.5) -- (0,0); %1
+                \draw[thick] (0,0) -- (2,0); %2
+                \draw[thick] (2,0) -- (1,1.5); %3
+
+                % Leyenda
+                \node[label=left:{$a_{i_0}^{-1}$}] at (0.5,0.73) {}; %1
+                % \node[label=below:{$b$}] at (1, 0) {}; %2
+                % \node[label=right:{$a_{i_0}$}] at (1.5, 0.73) {}; %3
+
+                % Flechas
+                \draw[<-] (0.5,0.73) ++(0, 0.01) -- ++(-0.01,-0.01); %1
+                % \draw[->] (1,0) ++(-0.01,0) -- ++(0.01,0); %2
+                % \draw[->] (1.5,0.73) ++(0, -0.01) -- ++(-0.01,0.01); %3
+            \end{scope}
+    \end{tikzpicture}
+\end{figure}
+
+\subsubsection{Subdividir}
+Podemos cambiar un símbolo $a_{i_0}$ en $\cc{P}$ por dos símbolos $b_1b_2$ y $a_{i_0}^{-1}$ por $b_2^{-1}b_1^{-1}$, donde los símbolos $b_1$ y $b_2$ no están siendo usados.
+
+\subsubsection{Consolidar}
+Es el proceso contrario a subdividir. Si en las expresiones aparecen $a_{i_1}a_{i_2}$ y/o $a_{i_2}^{-1}a_{i_1}^{-1}$ dos veces (una de cada o dos de la misma), entones podemos cambiar $a_{i_1}a_{i_2}$ por $b_0$ y $a_{i_2}^{-1}a_{i_1}^{-1}$ por $b_0^{-1}$ (donde $b_0$ es un símbolo nuevo). Esto siempre se podrá hacer de forma que ninguna expresión se quede con menos de 3 símbolos.
+
+\subsubsection{Reflejar}
+Dada una expresión
+\begin{gather*}
+    w_i=a_{i_1}^{\veps_1}a_{i_2}^{\veps_2}...a_{i_l}^{\veps_l}
+\end{gather*}
+la podemos cambiar por
+\begin{gather*}
+    w_i' = a_{i_l}^{-\veps_l}...a_{i_2}^{-\veps_2}a_{i_1}^{-\veps_1}
+\end{gather*}
+
+\subsubsection{Rotar}
+Dada una expresión
+\begin{gather*}
+    w_i=a_{i_1}^{\veps_1}...a_{i_k}^{\veps_k}a_{i_{k+1}}^{\veps_{k+1}}...a_{i_l}^{\veps_l}
+\end{gather*}
+la podemos cambiar por
+\begin{gather*}
+    w_i'=a_{i_{k+1}}^{\veps_{k+1}}...a_{i_l}^{\veps_l}a_{i_1}^{\veps_1}...a_{i_k}^{\veps_k}
+\end{gather*}
+
+\subsubsection{Cortar}
+Dada una expresión
+\begin{gather*}
+    w_i=a_{i_1}^{\veps_1}...a_{i_k}^{\veps_k}a_{i_{k+1}}^{\veps_{k+1}}...a_{i_l}^{\veps_l}
+\end{gather*}
+podemos sustituirla por las dos expresiones
+\begin{gather*}
+    w_i' = a_{i_1}^{\veps_1}...a_{i_k}^{\veps_k}b\ \ ,\ \ w_i'' = b^{-1}a_{i_{k+1}}^{\veps_{k+1}}...a_{i_l}^{\veps_l}
+\end{gather*}
+Esto siempre se podrá hacer siempre que $w_i'$ y $w_i''$ se queden con al menos de 3 símbolos.
+
+\subsubsection{Pegar}
+Es la operación opuesta a cortar. Dadas dos expresiones de la forma 
+\begin{gather*}
+    w_i' = a_{i_1}^{\veps_1}...a_{i_k}^{\veps_k}a_{i_0}\ \ ,\ \ w_i'' = a_{i_0}^{-1}a_{j_{1}}^{\veps_{1}}...a_{j_l}^{\veps_l}
+\end{gather*}
+las podemos sustituir por una única
+\begin{gather*}
+    w = a_{i_1}^{\veps_1}...a_{i_k}^{\veps_k}a_{j_{1}}^{\veps_{1}}...a_{j_l}^{\veps_l}
+\end{gather*}
+
+\subsubsection{Desdoblar}
+Dada una expresión 
+\begin{gather*}
+    w_i=a_{i_1}^{\veps_1}...a_{i_k}^{\veps_k}a_{i_{k+1}}^{\veps_{k+1}}...a_{i_l}^{\veps_l}
+\end{gather*}
+le podemos añadir un símbolo nuevo $b$ cambiando la expresión anterior por 
+\begin{gather*}
+    w_i'=a_{i_1}^{\veps_1}...a_{i_k}^{\veps_k}bb^{-1}a_{i_{k+1}}^{\veps_{k+1}}...a_{i_l}^{\veps_l}
+\end{gather*}
+
+\subsubsection{Doblar}
+Es el proceso contrario a desdoblar. Si una expresión $w$ tiene de forma consecutiva un símbolo y el mismo con exponente cambiado podemos quitar dicho símbolo de la expresión. Esto se podrá hacer siempre que al quitarle estos símbolos queden al menos 3.
+
+\begin{ejemplo}
+    $\cc{P} = \{a,b,c; a^{-1}cb,\ ac^{-1}b^{-1}\}$
 \end{ejemplo}
