--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_3.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_3.tex
@@ -562,10 +562,10 @@ Una vez recordados estos conceptos pasamos a las nuevas definiciones de esta sec
                     \node at (0,-1.3) {$d$};
 
                     %Sentidos
-                    \draw[->] (1,0) ++(0, -0.01) -- ++(0,0.01); %a
-                    \draw[->] (0,1) ++(0.01, 0) -- ++(-0.01,0); %b
-                    \draw[->] (-1,0) ++(0, -0.01) -- ++(0,0.01); %c
-                    \draw[<-] (0,-1) ++(0.01, 0) -- ++(-0.01,0); %d
+                    \draw[->, thick] (1,0) ++(0, -0.01) -- ++(0,0.01); %a
+                    \draw[->, thick] (0,1) ++(0.01, 0) -- ++(-0.01,0); %b
+                    \draw[->, thick] (-1,0) ++(0, -0.01) -- ++(0,0.01); %c
+                    \draw[<-, thick] (0,-1) ++(0.01, 0) -- ++(-0.01,0); %d
 
                 \end{scope}
                 \begin{scope}[shift={(4,0)}]
@@ -579,10 +579,10 @@ Una vez recordados estos conceptos pasamos a las nuevas definiciones de esta sec
                     \node at (0,-1.3) {$d$};
 
                     %Sentidos
-                    \draw[<-] (1,0) ++(0, -0.01) -- ++(0,0.01); %a
-                    \draw[<-] (0,1) ++(0.01, 0) -- ++(-0.01,0); %b
-                    \draw[<-] (-1,0) ++(0, -0.01) -- ++(0,0.01); %c
-                    \draw[->] (0,-1) ++(0.01, 0) -- ++(-0.01,0); %d
+                    \draw[<-, thick] (1,0) ++(0, -0.01) -- ++(0,0.01); %a
+                    \draw[<-, thick] (0,1) ++(0.01, 0) -- ++(-0.01,0); %b
+                    \draw[<-, thick] (-1,0) ++(0, -0.01) -- ++(0,0.01); %c
+                    \draw[->, thick] (0,-1) ++(0.01, 0) -- ++(-0.01,0); %d
                 \end{scope}
             \end{tikzpicture}
         \end{figure}
@@ -603,10 +603,10 @@ Una vez recordados estos conceptos pasamos a las nuevas definiciones de esta sec
                     \node at (0,-1.3) {$d$};
 
                     %Sentidos
-                    \draw[->] (1,0) ++(0, -0.01) -- ++(0,0.01); %a
-                    \draw[->] (0,1) ++(0.01, 0) -- ++(-0.01,0); %b
-                    \draw[->] (-1,0) ++(0, -0.01) -- ++(0,0.01); %c
-                    \draw[<-] (0,-1) ++(0.01, 0) -- ++(-0.01,0); %d
+                    \draw[->, thick] (1,0) ++(0, -0.01) -- ++(0,0.01); %a
+                    \draw[->, thick] (0,1) ++(0.01, 0) -- ++(-0.01,0); %b
+                    \draw[->, thick] (-1,0) ++(0, -0.01) -- ++(0,0.01); %c
+                    \draw[<-, thick] (0,-1) ++(0.01, 0) -- ++(-0.01,0); %d
 
                     %Identificaciones
                     \filldraw[blue] (1,1) circle (2pt) node[above right] {$2$};
@@ -623,10 +623,10 @@ Una vez recordados estos conceptos pasamos a las nuevas definiciones de esta sec
                     \node at (0,-1.3) {$d$};
 
                     %Sentidos
-                    \draw[<-] (1,0) ++(0, -0.01) -- ++(0,0.01); %a
-                    \draw[<-] (0,1) ++(0.01, 0) -- ++(-0.01,0); %b
-                    \draw[<-] (-1,0) ++(0, -0.01) -- ++(0,0.01); %c
-                    \draw[->] (0,-1) ++(0.01, 0) -- ++(-0.01,0); %d
+                    \draw[<-, thick] (1,0) ++(0, -0.01) -- ++(0,0.01); %a
+                    \draw[<-, thick] (0,1) ++(0.01, 0) -- ++(-0.01,0); %b
+                    \draw[<-, thick] (-1,0) ++(0, -0.01) -- ++(0,0.01); %c
+                    \draw[->, thick] (0,-1) ++(0.01, 0) -- ++(-0.01,0); %d
 
                     % Identificaciones 
                     \filldraw[blue] (1,1) circle (2pt) node[above right] {$1$};
@@ -657,12 +657,12 @@ Una vez recordados estos conceptos pasamos a las nuevas definiciones de esta sec
                 \node[red] at (1.7,1.1) {$d$};
 
                 % Flechas
-                \draw[<-, blue] (0.5,0.75) ++(0, -0.01) -- ++(0.01,0.01); %a
-                \draw[->, blue] (1,0) ++(-0.01,0) -- ++(0.01,0); %b
-                \draw[->, blue] (1.5,0.75) ++(0, -0.01) -- ++(-0.01,0.01); %c
-                \draw[->, red] (1.5,1) ++(0, -0.01) -- ++(-0.01,0.01); %d
-                \draw[->, red] (2,0.25) ++(0, -0.01) -- ++(0,0.01); %e
-                \draw[<-, red] (1.25,0.32) ++(0, -0.01) -- ++(0.01,0.002); %f
+                \draw[<-, blue, thick] (0.5,0.75) ++(0, -0.01) -- ++(0.01,0.01); %a
+                \draw[->, blue, thick] (1,0) ++(-0.01,0) -- ++(0.01,0); %b
+                \draw[->, blue, thick] (1.5,0.75) ++(0, -0.01) -- ++(-0.01,0.01); %c
+                \draw[->, red, thick] (1.5,1) ++(0, -0.01) -- ++(-0.01,0.01); %d
+                \draw[->, red, thick] (2,0.25) ++(0, -0.01) -- ++(0,0.01); %e
+                \draw[<-, red, thick] (1.25,0.32) ++(0, -0.01) -- ++(0.01,0.002); %f
 
                 % Identificaciones
                 \filldraw[green!60!black] (0,0) circle (1pt) node[above left] {$v_1$};
@@ -681,9 +681,9 @@ Una vez recordados estos conceptos pasamos a las nuevas definiciones de esta sec
                     \node[red] at (0.9,0.45) {$f$};
 
                     % Flechas
-                    \draw[->, blue] (0.25,0.365) ++(0, 0.01) -- ++(-0.01,-0.01); %1
-                    \draw[->, red] (0.5,0) ++(-0.01,0) -- ++(0.01,0); %2
-                    \draw[->, red] (0.75,0.365) ++(0, -0.01) -- ++(-0.01,0.01); %3
+                    \draw[->, blue, thick] (0.25,0.365) ++(0, 0.01) -- ++(-0.01,-0.01); %1
+                    \draw[->, red, thick] (0.5,0) ++(-0.01,0) -- ++(0.01,0); %2
+                    \draw[->, red, thick] (0.75,0.365) ++(0, -0.01) -- ++(-0.01,0.01); %3
 
                     % Identificación
                     \filldraw[green!60!black] (0.5,0.75) circle (1pt) node[above] {$v_1$};
@@ -700,9 +700,9 @@ Una vez recordados estos conceptos pasamos a las nuevas definiciones de esta sec
                     \node[blue] at (0.9,0.45) {$c$};
 
                     % Flechas
-                    \draw[->, blue] (0.25,0.365) ++(0, 0.01) -- ++(-0.01,-0.01); %1
-                    \draw[->, blue] (0.5,0) ++(-0.01,0) -- ++(0.01,0); %2
-                    \draw[->, blue] (0.75,0.365) ++(0, -0.01) -- ++(-0.01,0.01); %3
+                    \draw[->, blue, thick] (0.25,0.365) ++(0, 0.01) -- ++(-0.01,-0.01); %1
+                    \draw[->, blue, thick] (0.5,0) ++(-0.01,0) -- ++(0.01,0); %2
+                    \draw[->, blue, thick] (0.75,0.365) ++(0, -0.01) -- ++(-0.01,0.01); %3
                 \end{scope}
                 \begin{scope}[shift={(0.8,1.5)}]
                     % Triángulo
@@ -716,9 +716,9 @@ Una vez recordados estos conceptos pasamos a las nuevas definiciones de esta sec
                     \node[red] at (0.9,0.45) {$d$};
 
                     % Flechas
-                    \draw[<-, blue] (0.25,0.365) ++(0, 0.01) -- ++(-0.01,-0.01); %1
-                    \draw[->, red] (0.5,0) ++(-0.01,0) -- ++(0.01,0); %2
-                    \draw[->, red] (0.75,0.365) ++(0, -0.01) -- ++(-0.01,0.01); %3
+                    \draw[<-, blue, thick] (0.25,0.365) ++(0, 0.01) -- ++(-0.01,-0.01); %1
+                    \draw[->, red, thick] (0.5,0) ++(-0.01,0) -- ++(0.01,0); %2
+                    \draw[->, red, thick] (0.75,0.365) ++(0, -0.01) -- ++(-0.01,0.01); %3
                 \end{scope}
                 \begin{scope}[shift={(0.8,0)}]
                     % Triángulo
@@ -732,9 +732,9 @@ Una vez recordados estos conceptos pasamos a las nuevas definiciones de esta sec
                     \node[blue] at (0.9,0.45) {$a$};
 
                     % Flechas
-                    \draw[<-, red] (0.25,0.365) ++(0, 0.01) -- ++(-0.01,-0.01); %1
-                    \draw[->, red] (0.5,0) ++(-0.01,0) -- ++(0.01,0); %2
-                    \draw[<-, blue] (0.75,0.365) ++(0, -0.01) -- ++(-0.01,0.01); %3
+                    \draw[<-, red, thick] (0.25,0.365) ++(0, 0.01) -- ++(-0.01,-0.01); %1
+                    \draw[->, red, thick] (0.5,0) ++(-0.01,0) -- ++(0.01,0); %2
+                    \draw[<-, blue, thick] (0.75,0.365) ++(0, -0.01) -- ++(-0.01,0.01); %3
                 \end{scope}
             \end{scope}
         \end{tikzpicture}
@@ -760,6 +760,8 @@ Dado un símbolo $a_{i_0}$ en $\cc{P}$ podemos cambiar su nombre por otro distin
 \begin{figure}[H]
     \centering
     \begin{tikzpicture}
+        \shorthandoff{>}
+        \begin{scope}[shift={(-4,0)}]
             \begin{scope}[shift={(0,0)}]
                 % Cuadrado
                 \draw[thick] (0,1.5) -- (0,0); %1
@@ -774,10 +776,10 @@ Dado un símbolo $a_{i_0}$ en $\cc{P}$ podemos cambiar su nombre por otro distin
                 % \node[label=above:{$d$}] at (0.75, 1.5) {}; %4
 
                 % Flechas
-                % \draw[->] (0,0.75) ++(0, 0.01) -- ++(0,-0.01); %1
-                % \draw[->] (0.75,0) ++(-0.01,0) -- ++(0.01,0); %2
-                \draw[->] (1.5,0.75) ++(0, -0.01) -- ++(0,0.01); %3
-                % \draw[->] (0.75,1.5) ++(0.01, -0.01) -- ++(-0.01,0); %4
+                % \draw[->, thick] (0,0.75) ++(0, 0.01) -- ++(0,-0.01); %1
+                % \draw[->, thick] (0.75,0) ++(-0.01,0) -- ++(0.01,0); %2
+                \draw[->, thick] (1.5,0.75) ++(0, -0.01) -- ++(0,0.01); %3
+                % \draw[->, thick] (0.75,1.5) ++(0.01, -0.01) -- ++(-0.01,0); %4
 
             \end{scope}
             \begin{scope}[shift={(3,0)}]
@@ -792,18 +794,242 @@ Dado un símbolo $a_{i_0}$ en $\cc{P}$ podemos cambiar su nombre por otro distin
                 % \node[label=right:{$a_{i_0}$}] at (1.5, 0.73) {}; %3
 
                 % Flechas
-                \draw[<-] (0.5,0.73) ++(0, 0.01) -- ++(-0.01,-0.01); %1
-                % \draw[->] (1,0) ++(-0.01,0) -- ++(0.01,0); %2
-                % \draw[->] (1.5,0.73) ++(0, -0.01) -- ++(-0.01,0.01); %3
+                \draw[<-, thick] (0.5,0.73) ++(0, 0.01) -- ++(-0.01,-0.01); %1
+                % \draw[->, thick] (1,0) ++(-0.01,0) -- ++(0.01,0); %2
+                % \draw[->, thick] (1.5,0.73) ++(0, -0.01) -- ++(-0.01,0.01); %3
             \end{scope}
+        \end{scope}
+
+        \draw[thick, dashed, ->] (2,0.75) -- (3,0.75);
+
+        \begin{scope}[shift={(4,0)}]
+            \begin{scope}[shift={(0,0)}]
+                % Cuadrado
+                \draw[thick] (0,1.5) -- (0,0); %1
+                \draw[thick] (0,0) -- (1.5,0); %2
+                \draw[thick] (1.5,0) -- (1.5,1.5); %3
+                \draw[thick] (1.5,1.5) -- (0,1.5); %4
+
+                % Leyenda
+                % \node[label=left:{$a$}] at (0, 0.75) {}; %1
+                % \node[label=below:{$b$}] at (0.75, 0) {}; %2
+                \node[label=right:{$a_{i_0}^ {-1}$}] at (1.5, 0.75) {}; %3
+                % \node[label=above:{$d$}] at (0.75, 1.5) {}; %4
+
+                % Flechas
+                % \draw[->, thick] (0,0.75) ++(0, 0.01) -- ++(0,-0.01); %1
+                % \draw[->, thick] (0.75,0) ++(-0.01,0) -- ++(0.01,0); %2
+                \draw[<-, thick] (1.5,0.75) ++(0, -0.01) -- ++(0,0.01); %3
+                % \draw[->, thick] (0.75,1.5) ++(0.01, -0.01) -- ++(-0.01,0); %4
+
+            \end{scope}
+            \begin{scope}[shift={(3,0)}]
+                % Triángulo
+                \draw[thick] (1,1.5) -- (0,0); %1
+                \draw[thick] (0,0) -- (2,0); %2
+                \draw[thick] (2,0) -- (1,1.5); %3
+
+                % Leyenda
+                \node[label=left:{$a_{i_0}$}] at (0.5,0.73) {}; %1
+                % \node[label=below:{$b$}] at (1, 0) {}; %2
+                % \node[label=right:{$a_{i_0}$}] at (1.5, 0.73) {}; %3
+
+                % Flechas
+                \draw[->, thick] (0.5,0.73) ++(0, 0.01) -- ++(-0.01,-0.01); %1
+                % \draw[->, thick] (1,0) ++(-0.01,0) -- ++(0.01,0); %2
+                % \draw[->, thick] (1.5,0.73) ++(0, -0.01) -- ++(-0.01,0.01); %3
+            \end{scope}
+        \end{scope}
     \end{tikzpicture}
 \end{figure}
 
 \subsubsection{Subdividir}
 Podemos cambiar un símbolo $a_{i_0}$ en $\cc{P}$ por dos símbolos $b_1b_2$ y $a_{i_0}^{-1}$ por $b_2^{-1}b_1^{-1}$, donde los símbolos $b_1$ y $b_2$ no están siendo usados.
 
+\begin{figure}[H]
+    \centering
+    \begin{tikzpicture}
+        \shorthandoff{>}
+        \begin{scope}[shift={(-4,0)}]
+            \begin{scope}[shift={(0,0)}]
+                % Cuadrado
+                \draw[thick] (0,1.5) -- (0,0); %1
+                \draw[thick] (0,0) -- (1.5,0); %2
+                \draw[thick] (1.5,0) -- (1.5,1.5); %3
+                \draw[thick] (1.5,1.5) -- (0,1.5); %4
+
+                % Leyenda
+                % \node[label=left:{$a$}] at (0, 0.75) {}; %1
+                % \node[label=below:{$b$}] at (0.75, 0) {}; %2
+                \node[label=right:{$a_{i_0}$}] at (1.5, 0.75) {}; %3
+                % \node[label=above:{$d$}] at (0.75, 1.5) {}; %4
+
+                % Flechas
+                % \draw[->, thick] (0,0.75) ++(0, 0.01) -- ++(0,-0.01); %1
+                % \draw[->, thick] (0.75,0) ++(-0.01,0) -- ++(0.01,0); %2
+                \draw[->, thick] (1.5,0.75) ++(0, -0.01) -- ++(0,0.01); %3
+                % \draw[->, thick] (0.75,1.5) ++(0.01, -0.01) -- ++(-0.01,0); %4
+
+            \end{scope}
+            \begin{scope}[shift={(3,0)}]
+                % Triángulo
+                \draw[thick] (1,1.5) -- (0,0); %1
+                \draw[thick] (0,0) -- (2,0); %2
+                \draw[thick] (2,0) -- (1,1.5); %3
+
+                % Leyenda
+                \node[label=left:{$a_{i_0}^{-1}$}] at (0.5,0.73) {}; %1
+                % \node[label=below:{$b$}] at (1, 0) {}; %2
+                % \node[label=right:{$a_{i_0}$}] at (1.5, 0.73) {}; %3
+
+                % Flechas
+                \draw[<-, thick] (0.5,0.73) ++(0, 0.01) -- ++(-0.01,-0.01); %1
+                % \draw[->, thick] (1,0) ++(-0.01,0) -- ++(0.01,0); %2
+                % \draw[->, thick] (1.5,0.73) ++(0, -0.01) -- ++(-0.01,0.01); %3
+            \end{scope}
+        \end{scope}
+
+        \draw[thick, dashed, ->] (2,0.75) -- (3,0.75);
+
+        \begin{scope}[shift={(4,0)}]
+            \begin{scope}[shift={(0,0)}]
+                % Cuadrado
+                \draw[thick] (0,1.5) -- (0,0); %1
+                \draw[thick] (0,0) -- (1.5,0); %2
+                \draw[thick] (1.5,0) -- (1.75,0.75) -- (1.5,1.5); %3
+                \draw[thick] (1.5,1.5) -- (0,1.5); %4
+
+                % Leyenda
+                % \node[label=left:{$a$}] at (0, 0.75) {}; %1
+                % \node[label=below:{$b$}] at (0.75, 0) {}; %2
+                \node[label=right:{$b_1$}] at (1.625, 0.375) {}; %3
+                \node[label=right:{$b_2$}] at (1.625, 1.125) {}; %3.5
+                % \node[label=above:{$d$}] at (0.75, 1.5) {}; %4
+
+                % Flechas
+                % \draw[->, thick] (0,0.75) ++(0, 0.01) -- ++(0,-0.01); %1
+                % \draw[->, thick] (0.75,0) ++(-0.01,0) -- ++(0.01,0); %2
+                \draw[->, thick] (1.625, 0.375) ++(-0.01, -0.01) -- ++(0.01,0.02); %3
+                \draw[->, thick] (1.625, 01.125) ++(0.01, -0.01) -- ++(-0.01,0.02); %3.5
+
+                % \draw[->] (0.75,1.5) ++(0.01, -0.01) -- ++(-0.01,0); %4
+
+            \end{scope}
+            \begin{scope}[shift={(4,0)}]
+                % Triángulo
+                \draw[thick] (1,1.5) -- (0.2,1) -- (0,0); %1
+                \draw[thick] (0,0) -- (2,0); %2
+                \draw[thick] (2,0) -- (1,1.5); %3
+
+                % Leyenda
+                \node[label=above left:{$b_2^{-1}$}] at (0.6,1.25) {}; %1
+                \node[label=left:{$b_1^{-1}$}] at (0.1,0.5) {}; %1.5
+                % \node[label=below:{$b$}] at (1, 0) {}; %2
+                % \node[label=right:{$a_{i_0}$}] at (1.5, 0.73) {}; %3
+
+                % Flechas
+                \draw[->, thick] (0.6,1.25) ++(0.01, 0.01) -- ++(-0.01,-0.01); %1
+                \draw[->, thick] (0.1,0.5) ++(0, 0.01) -- ++(-0.01,-0.03); %1.5
+                % \draw[->, thick] (1,0) ++(-0.01,0) -- ++(0.01,0); %2
+                % \draw[->, thick] (1.5,0.73) ++(0, -0.01) -- ++(-0.01,0.01); %3
+            \end{scope}
+        \end{scope}
+    \end{tikzpicture}
+\end{figure}
+
 \subsubsection{Consolidar}
 Es el proceso contrario a subdividir. Si en las expresiones aparecen $a_{i_1}a_{i_2}$ y/o $a_{i_2}^{-1}a_{i_1}^{-1}$ dos veces (una de cada o dos de la misma), entones podemos cambiar $a_{i_1}a_{i_2}$ por $b_0$ y $a_{i_2}^{-1}a_{i_1}^{-1}$ por $b_0^{-1}$ (donde $b_0$ es un símbolo nuevo). Esto siempre se podrá hacer de forma que ninguna expresión se quede con menos de 3 símbolos.
+
+\begin{figure}[H]
+    \centering
+    \begin{tikzpicture}
+        \shorthandoff{>}
+        \begin{scope}[shift={(-4.5,0)}]
+            \begin{scope}[shift={(0,0)}]
+                % Cuadrado
+                \draw[thick] (0,1.5) -- (0,0); %1
+                \draw[thick] (0,0) -- (1.5,0); %2
+                \draw[thick] (1.5,0) -- (1.75,0.75) -- (1.5,1.5); %3
+                \draw[thick] (1.5,1.5) -- (0,1.5); %4
+
+                % Leyenda
+                % \node[label=left:{$a$}] at (0, 0.75) {}; %1
+                % \node[label=below:{$b$}] at (0.75, 0) {}; %2
+                \node[label=right:{$a_{i_1}$}] at (1.625, 0.375) {}; %3
+                \node[label=right:{$a_{i_2}$}] at (1.625, 1.125) {}; %3.5
+                % \node[label=above:{$d$}] at (0.75, 1.5) {}; %4
+
+                % Flechas
+                % \draw[->, thick] (0,0.75) ++(0, 0.01) -- ++(0,-0.01); %1
+                % \draw[->, thick] (0.75,0) ++(-0.01,0) -- ++(0.01,0); %2
+                \draw[->, thick] (1.625, 0.375) ++(-0.01, -0.01) -- ++(0.01,0.02); %3
+                \draw[->, thick] (1.625, 01.125) ++(0.01, -0.01) -- ++(-0.01,0.02); %3.5
+
+                % \draw[->] (0.75,1.5) ++(0.01, -0.01) -- ++(-0.01,0); %4
+
+            \end{scope}
+            \begin{scope}[shift={(4,0)}]
+                % Triángulo
+                \draw[thick] (1,1.5) -- (0.2,1) -- (0,0); %1
+                \draw[thick] (0,0) -- (2,0); %2
+                \draw[thick] (2,0) -- (1,1.5); %3
+
+                % Leyenda
+                \node[label=above left:{$a_{i_2}^{-1}$}] at (0.6,1.25) {}; %1
+                \node[label=left:{$a_{i_1}^{-1}$}] at (0.1,0.5) {}; %1.5
+                % \node[label=below:{$b$}] at (1, 0) {}; %2
+                % \node[label=right:{$a_{i_0}$}] at (1.5, 0.73) {}; %3
+
+                % Flechas
+                \draw[->, thick] (0.6,1.25) ++(0.01, 0.01) -- ++(-0.01,-0.01); %1
+                \draw[->, thick] (0.1,0.5) ++(0, 0.01) -- ++(-0.01,-0.03); %1.5
+                % \draw[->, thick] (1,0) ++(-0.01,0) -- ++(0.01,0); %2
+                % \draw[->, thick] (1.5,0.73) ++(0, -0.01) -- ++(-0.01,0.01); %3
+            \end{scope}
+        \end{scope}
+
+        \draw[thick, dashed, ->] (2,0.75) -- (3,0.75);
+
+        \begin{scope}[shift={(4,0)}]
+            \begin{scope}[shift={(0,0)}]
+                % Cuadrado
+                \draw[thick] (0,1.5) -- (0,0); %1
+                \draw[thick] (0,0) -- (1.5,0); %2
+                \draw[thick] (1.5,0) -- (1.5,1.5); %3
+                \draw[thick] (1.5,1.5) -- (0,1.5); %4
+
+                % Leyenda
+                % \node[label=left:{$a$}] at (0, 0.75) {}; %1
+                % \node[label=below:{$b$}] at (0.75, 0) {}; %2
+                \node[label=right:{$b_0$}] at (1.5, 0.75) {}; %3
+                % \node[label=above:{$d$}] at (0.75, 1.5) {}; %4
+
+                % Flechas
+                % \draw[->, thick] (0,0.75) ++(0, 0.01) -- ++(0,-0.01); %1
+                % \draw[->, thick] (0.75,0) ++(-0.01,0) -- ++(0.01,0); %2
+                \draw[->, thick] (1.5,0.75) ++(0, -0.01) -- ++(0,0.01); %3
+                % \draw[->, thick] (0.75,1.5) ++(0.01, -0.01) -- ++(-0.01,0); %4
+
+            \end{scope}
+            \begin{scope}[shift={(3,0)}]
+                % Triángulo
+                \draw[thick] (1,1.5) -- (0,0); %1
+                \draw[thick] (0,0) -- (2,0); %2
+                \draw[thick] (2,0) -- (1,1.5); %3
+
+                % Leyenda
+                \node[label=left:{$b_0^{-1}$}] at (0.5,0.73) {}; %1
+                % \node[label=below:{$b$}] at (1, 0) {}; %2
+                % \node[label=right:{$a_{i_0}$}] at (1.5, 0.73) {}; %3
+
+                % Flechas
+                \draw[<-, thick] (0.5,0.73) ++(0, 0.01) -- ++(-0.01,-0.01); %1
+                % \draw[->, thick] (1,0) ++(-0.01,0) -- ++(0.01,0); %2
+                % \draw[->, thick] (1.5,0.73) ++(0, -0.01) -- ++(-0.01,0.01); %3
+            \end{scope}
+        \end{scope}
+    \end{tikzpicture}
+\end{figure}
 
 \subsubsection{Reflejar}
 Dada una expresión
